Add workflow_dispatch trigger to backend-deploy workflow

--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - 'SaasPE-Backend/**'
       - '.github/workflows/backend-deploy.yml'
+  workflow_dispatch:
 
 permissions:
   id-token: write
